--- a/app/globals.css
+++ b/app/globals.css
@@ -2,31 +2,114 @@
 
 
 :root {
-    --color-primary: #6C0443;
-    --color-border: #DFE2E6;
-    --color-input: #F5F6F7;
+  --color-primary: #6C0443;
+  --color-border: #DFE2E6;
+  --color-input: #F5F6F7;
 }
 
 @font-face {
-    font-family: "General Sans Variable";
-    src: url("https://db.onlinewebfonts.com/t/7b7a625024c0f39cbca2cf9674f51d94.eot");
-    src: url("https://db.onlinewebfonts.com/t/7b7a625024c0f39cbca2cf9674f51d94.eot?#iefix")format("embedded-opentype"),
-        url("https://db.onlinewebfonts.com/t/7b7a625024c0f39cbca2cf9674f51d94.woff2")format("woff2"),
-        url("https://db.onlinewebfonts.com/t/7b7a625024c0f39cbca2cf9674f51d94.woff")format("woff"),
-        url("https://db.onlinewebfonts.com/t/7b7a625024c0f39cbca2cf9674f51d94.ttf")format("truetype"),
-        url("https://db.onlinewebfonts.com/t/7b7a625024c0f39cbca2cf9674f51d94.svg#General Sans Variable")format("svg");
+  font-family: "General Sans Variable";
+  src: url("https://db.onlinewebfonts.com/t/7b7a625024c0f39cbca2cf9674f51d94.eot");
+  src: url("https://db.onlinewebfonts.com/t/7b7a625024c0f39cbca2cf9674f51d94.eot?#iefix")format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/7b7a625024c0f39cbca2cf9674f51d94.woff2")format("woff2"),
+    url("https://db.onlinewebfonts.com/t/7b7a625024c0f39cbca2cf9674f51d94.woff")format("woff"),
+    url("https://db.onlinewebfonts.com/t/7b7a625024c0f39cbca2cf9674f51d94.ttf")format("truetype"),
+    url("https://db.onlinewebfonts.com/t/7b7a625024c0f39cbca2cf9674f51d94.svg#General Sans Variable")format("svg");
+}
+
+@font-face {
+  font-family: "Clash Display Variable";
+  src: url("https://db.onlinewebfonts.com/t/2fcd723a1a012506da3928146b19364d.eot");
+  src: url("https://db.onlinewebfonts.com/t/2fcd723a1a012506da3928146b19364d.eot?#iefix")format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/2fcd723a1a012506da3928146b19364d.woff2")format("woff2"),
+    url("https://db.onlinewebfonts.com/t/2fcd723a1a012506da3928146b19364d.woff")format("woff"),
+    url("https://db.onlinewebfonts.com/t/2fcd723a1a012506da3928146b19364d.ttf")format("truetype"),
+    url("https://db.onlinewebfonts.com/t/2fcd723a1a012506da3928146b19364d.svg#Clash Display Variable")format("svg");
+}
+
+@font-face {
+  font-family: "Silka";
+  src: url("https://db.onlinewebfonts.com/t/314799d808058420a00fdd2500eb1aa3.eot");
+  src: url("https://db.onlinewebfonts.com/t/314799d808058420a00fdd2500eb1aa3.eot?#iefix")format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/314799d808058420a00fdd2500eb1aa3.woff2")format("woff2"),
+    url("https://db.onlinewebfonts.com/t/314799d808058420a00fdd2500eb1aa3.woff")format("woff"),
+    url("https://db.onlinewebfonts.com/t/314799d808058420a00fdd2500eb1aa3.ttf")format("truetype"),
+    url("https://db.onlinewebfonts.com/t/314799d808058420a00fdd2500eb1aa3.svg#Silka")format("svg");
+}
+
+@font-face {
+  font-family: 'Blauer Nue';
+  src: url('/fonts/Blauer-Nue.otf') format('opentype');
+}
+
+.blauerNew {
+  font-family: 'Blauer Nue' !important;
+}
+
+.silka {
+  font-family: 'Silka' !important;
 }
 
 body {
-    font-family: "General Sans Variable", sans-serif;
+  font-family: "General Sans Variable", sans-serif;
 }
 
 
 @keyframes scaleIn {
-  0% { transform: scale(0.9) translate(-50%, -50%); opacity: 0; }
-  100% { transform: scale(1) translate(-50%, -50%); opacity: 1; }
+  0% {
+    transform: scale(0.9) translate(-50%, -50%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(1) translate(-50%, -50%);
+    opacity: 1;
+  }
 }
 
 .animate-scaleIn {
   animation: scaleIn 0.25s ease-out;
+}
+
+.gradient-text {
+  text-align: center;
+  font-family: 'Clash Display Variable', sans-serif !important;
+  font-weight: 700;
+
+  line-height: 110%;
+  letter-spacing: 0%;
+  background: linear-gradient(93.35deg, #FFFFFF 17.83%, #A5C5DD 80.08%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
+}
+
+.gradient-button-purple {
+
+  background: linear-gradient(214.18deg, rgba(105, 63, 255, 0.99) 20.22%, #C02EE5 77.53%);
+
+}
+
+
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.marquee-text {
+  display: inline-block;
+  white-space: nowrap;
+  animation: marquee 20s linear infinite;
+}
+
+.org {
+  background: #ffffff;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(230, 230, 230, 0.477) 50%, rgba(255, 255, 255, 1) 100%);
+
 }
