--- a/app/globals.css
+++ b/app/globals.css
@@ -71,6 +71,11 @@ body {
   animation: scaleIn 0.25s ease-out;
 }
 
+.clashDisplay{
+    font-family: 'Clash Display Variable', sans-serif !important;
+
+}
+
 .gradient-text {
   text-align: center;
   font-family: 'Clash Display Variable', sans-serif !important;
@@ -113,3 +118,31 @@ body {
   background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(230, 230, 230, 0.477) 50%, rgba(255, 255, 255, 1) 100%);
 
 }
+
+
+.bg-linear-pink {
+--background: linear-gradient(90.66deg, #FCC3FF 0%, #F75EFF 100%);
+background: var(--background);
+}
+
+
+.courses-bg {
+background: linear-gradient(
+180deg,
+rgba(249, 196, 254, 0) 0%,
+rgba(252, 221, 255, 0.5) 44.34%,
+rgba(249, 196, 254, 0) 100%
+);
+}
+
+
+.indigo-linear-bg {
+background: linear-gradient(214.18deg, #2A0019 20.22%, #5C0639 77.53%);
+}
+
+.course-card-bg {
+background: linear-gradient(270.28deg, rgba(42, 0, 25, 0.46) 29.3%, #4C002D 98.92%);
+
+}
+
+
