--- a/app/globals.css
+++ b/app/globals.css
@@ -145,4 +145,8 @@ background: linear-gradient(270.28deg, rgba(42, 0, 25, 0.46) 29.3%, #4C002D 98.9
 
 }
 
+.trusted-by-bg{
+  background: linear-gradient(180deg, #2A0019 0%, rgba(60, 76, 90, 0.83) 100%);
+
+}
 
